# VobSub2SRT

./: CMakeLists.txt  Makefile  README.md  configure
.github/workflows/: cmake.yml
debian/: changelog
doc/: CMakeLists.txt  completion.sh  vobsub2srt.1
mplayer/: README  av_rb32.h  mp_msg.c  mp_msg.h  spudec.c  spudec.h  unrar_exec.c  unrar_exec.h  vobsub.c  vobsub.h
packaging/: vobsub2srt.rb
src/: cmd_options.c++  cmd_options.h++  langcodes.c++  langcodes.h++  vobsub2srt.c++
tools/: gen_langcodes.pl
